<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_car_menu"
        android:icon="@drawable/car_icon"
        android:title="@string/car_menu" />
    <item
        android:id="@+id/nav_your_reservations"
        android:icon="@drawable/reservation_icon"
        android:title="@string/your_reservations" />
    <item
        android:id="@+id/nav_your_favorites"
        android:icon="@drawable/favourite_icon"
        android:title="@string/your_favorites" />
    <item
        android:id="@+id/nav_special_offers"
        android:icon="@drawable/specail_offer_icon"
        android:title="@string/special_offers" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_calll_us_or_find_us"
        android:icon="@drawable/call_icon"
        android:title="@string/calll_us_or_find_us" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout" />
</group>
</menu>
