<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- activity_history.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white"
        tools:context=".HistoryActivity">

        <!-- Title -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_amp_h"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- Introduction -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_the_journey_of_h_h_where_passion_for_cars_meets_integrity_in_business_explore_our_history_and_commitment_to_providing_quality_vehicles_and_exceptional_service"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>


        <!-- Year 1998: The Inception -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_1998_the_inception"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_1998_huthayfa_and_hammam_founded_h_amp_h_auto_emporium"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Year 2005: Driven by Success -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_2005_driven_by_success"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_dealership_expanded_offering_a_wide_range_of_vehicles"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Year 2010: Embracing Technology -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_2010_embracing_technology"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_amp_h_introduced_an_easy_to_use_website_for_online_browsing_and_test_drive_scheduling"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Year 2015: Eco-Friendly Initiatives -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_2015_eco_friendly_initiatives"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_response_to_environmental_concerns_h_amp_h_introduced_eco_friendly_vehicle_options_and_green_practices"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Year 2021: Passing the Legacy -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_2021_passing_the_legacy"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_next_generation_took_over_continuing_the_legacy_of_customer_satisfaction"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Present Day: H&H Auto Emporium Today -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/present_day_h_amp_h_auto_emporium_today"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_h_amp_h_auto_emporium_is_a_reputable_dealership_with_a_focus_on_quality_vehicles_and_service"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>